# SuperTeam

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DATABASE_DESIGN.md  DESIGN.md  README.md  ROADMAP.md  docker-compose.dev.yml  go.work  go.work.sum  package.json  pnpm-lock.yaml  tsconfig.base.json
.antigravitycli/: 5de7a987-ce27-4583-bc15-119b20e0d077.json  e781c483-0694-4d5f-b2d9-e52cacea7500.json
.scratch/smoke-control-plane/: health.body  health.headers
.scratch/tab-designs/: capture-options.mjs  superteam-tab-options.html
.scratch/team-ui-audit/: cookies.txt
.scratch/team-ui-gap-audit/: audit.md
apps/control-plane/: .env.example  Makefile  atlas.hcl  fix_handler.py  fix_logic.py  fix_tests.py  fix_tests2.py  fix_tests3.py  fix_tests4.py  fix_tests5.py  fix_tests6.py  fix_tests7.py  fix_tests8.py  go.mod  go.sum  scratch_json.go  sqlc.yaml  test.sh
apps/desktop/: README.md  package.json
apps/runtime-agent/: .env.example  Cargo.toml  config.example.toml  config.example.yaml  go.mod
apps/runtime-agent/cmd/runtime-agent/: main.go
apps/runtime-agent/internal/daemon/: runner.go  runner_test.go
apps/runtime-agent/src/: artifacts.rs  config.rs  daemon.rs  events.rs  health.rs  instances.rs  lib.rs  main.rs  runs.rs  server.rs  session.rs  workspace_files.rs
apps/runtime-agent/src/commands/: executor.rs  mod.rs  payload.rs  registry.rs
apps/runtime-agent/src/controlplane/: client.rs  mod.rs  models.rs  ws.rs
apps/runtime-agent/src/executor/: loops.rs  mod.rs  retry.rs  task.rs  workspace.rs
apps/runtime-agent/src/providers/: claude.rs  mod.rs  opencode.rs
apps/runtime-agent/tests/: cli_run_test.rs  controlplane_client_test.rs  daemon_test.rs  health_test.rs  http_server_test.rs  instances_test.rs  provider_command_test.rs  provider_event_test.rs  provider_exit_test.rs  provider_spawn_test.rs  run_registry_test.rs  runtime_command_executor_test.rs  runtime_command_payload_test.rs  runtime_command_registry_test.rs  workspace_files_test.rs
apps/web/: .env.development  .env.example  .env.production  THIRD_PARTY_NOTICES.md  fix_frontend.py  fix_teams.py  index.html  next.config.ts  (+3 more)
docs/: NEXT_STEPS.md  api.md  configuration.md  development.md  开发演进路线图.md  数字员工平台技术方案.md  设计想法.md
scripts/: db-migrate.sh  dev-services.sh  dev-services.test.sh  generate-runtime-token.sh  verify-foundation-contracts.mjs
(+558 files in other folders)
