[package]
name = "superteam-runtime-agent"
version = "0.1.0"
edition = "2024"

[lib]
name = "superteam_runtime_agent"
path = "src/lib.rs"

[[bin]]
name = "runtime-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1.5"
aws-sdk-s3 = "1.55"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3.23"
